--- a/templates/example.html
+++ b/templates/example.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Руди Дмитрий. Лабораторная работа 2</title>
+        <title>Руди Дмитрий. Лабораторная работа {{ nlab }}</title>
     </head>
     <body>
         <header>
-            НГТУ, ФБ, WEB-программирование, часть 2. Лабораторная работа 2
+            НГТУ, ФБ, WEB-программирование, часть 2. Лабораторная работа {{ nlab }}
         </header>
 
         <main>
