--- a/templates/example.html
+++ b/templates/example.html
@@ -11,8 +11,11 @@
         </header>
 
         <main>
-            основной контент
-        </main>
+            основной контент:<br>
+            11*28 = {{ 11 * 28 }} <br>
+            3258-759 = {{ 3258 - 759 }}<br>
+            8452/793 = {{ 8452 / 793 }}<br>
+            45<sup>8</sup> = {{ 45 ** 8 }}<br>
 
         <footer>
             &copy; {{ name }}, ФБИ-24, 3 курс, 2024 
