--- a/templates/example.html
+++ b/templates/example.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Руди Дмитрий. Лабораторная работа {{ nlab }}</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-    </head>
-    <body>
-        <header>
-            НГТУ, ФБ, WEB-программирование, часть 2. Лабораторная работа {{ nlab }}
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Руди Дмитрий. Лабораторная работа {{ nlab }}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+</head>
+<body>
+    <header>
+        НГТУ, ФБ, WEB-программирование, часть 2. {% if nlab %}Лабораторная работа {{ nlab }}{% else %}Лабораторная работа не указана{% endif %}
+    </header>
 
-        <main>
-            основной контент:<br>
-            11*28 = {{ 11 * 28 }} <br>
-            3258-759 = {{ 3258 - 759 }}<br>
-            8452/793 = {{ 8452 / 793 }}<br>
-            45<sup>8</sup> = {{ 45 ** 8 }}<br>
+    <main>
+        основной контент:<br>
+        11*28 = {{ 11 * 28 }} <br>
+        3258-759 = {{ 3258 - 759 }}<br>
+        8452/793 = {{ 8452 / 793 }}<br>
+        45<sup>8</sup> = {{ 45 ** 8 }}<br>
+    </main>
 
-        <footer>
-            &copy; {{ name }}, ФБИ-24, 3 курс, 2024 
-        </footer>
-    </body>
+    <footer>
+        &copy; {% if name %}{{ name }}{% else %}Анонимус{% endif %}, 
+        {% if group %}ФБИ-{{ group }},{% else %}Группа не указана,{% endif %} 
+        {% if course %} {{ course }} курс,{% else %}Курс не указан,{% endif %} 2024 
+    </footer>
+</body>
 </html>
