--- a/templates/example.html
+++ b/templates/example.html
@@ -17,6 +17,13 @@
         3258-759 = {{ 3258 - 759 }}<br>
         8452/793 = {{ 8452 / 793 }}<br>
         45<sup>8</sup> = {{ 45 ** 8 }}<br>
+
+        <h2>Список фруктов:</h2>
+        <ul>
+            {% for fruit in fruits %}
+                <li>{{ loop.index }}. {{ fruit.name }} - {{ fruit.price }} ₽</li>
+            {% endfor %}
+        </ul>
     </main>
 
     <footer>
