--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -1,11 +1,15 @@
-{% extends "base.html" %}
-
-{% block lab %}Лабораторная работа 3{% endblock %}
-
-{% block content %}
-    <h1>Формы,cookie</h1>
-    <div>Список сделанных страниц</div>
+{% block main %}
+    <h1>Формы, cookie</h1>
+    <div>
+        Привет, <span style="color: {{name_color}}">{{ name }}</span>
+    </div>
+    <div>Список сделанных страниц</div> 
     <ol>
-        <li><a href="/lab3/cookie">Куки</a></li>
+        <li>
+            <a href="/lab3/cookie">установка Куки</a>
+        </li>
+        <li>
+            <a href="/lab3/clear_cookie">Очистка куки</a>
+        </li>
     </ol>
 {% endblock %}
