--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -1,3 +1,6 @@
+<!-- templates/lab3/lab3.html -->
+{% extends "base.html" %}
+
 {% block main %}
     <h1>Формы, cookie</h1>
     <div>
@@ -6,10 +9,13 @@
     <div>Список сделанных страниц</div> 
     <ol>
         <li>
+            <a href="{{ url_for('lab3.form1') }}">Форма для сбора данных</a>
+        </li>
+        <li>
             <a href="/lab3/cookie">установка Куки</a>
         </li>
         <li>
-            <a href="/lab3/clear_cookie">Очистка куки</a>
+            <a href="/lab3/clear_cookies">Очистка куки</a>
         </li>
     </ol>
 {% endblock %}
