--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,16 @@
     <title>Руди Дмитрий. Лабораторная работа 2</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <style>
+        body {
+            {% if request.cookies.get('color') %}color: {{ request.cookies.get('color') }};{% else %}color: black;{% endif %}
+            {% if request.cookies.get('background_color') %}background-color: {{ request.cookies.get('background_color') }};{% else %}background-color: white;{% endif %}
+            {% if request.cookies.get('font_size') %}font-size: {{ request.cookies.get('font_size') }}px;{% else %}font-size: 16px;{% endif %}
+        }
+        a {
+            {% if request.cookies.get('link_color') %}color: {{ request.cookies.get('link_color') }};{% else %}color: blue;{% endif %}
+        }
+    </style>
 </head>
 <body>
     <header>
