--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -1,10 +1,11 @@
-<!-- templates/lab3/lab3.html -->
 {% extends "base.html" %}
 
-{% block main %}
+{% block lab %}Лабораторная работа 3{% endblock %}
+
+{% block content %}
     <h1>Формы, cookie</h1>
     <div>
-        Привет, <span style="color: {{name_color}}">{{ name }}</span>
+        Привет, <span style="color: {{ name_color }}">{{ name }}</span>
     </div>
     <div>Список сделанных страниц</div> 
     <ol>
@@ -16,6 +17,12 @@
         </li>
         <li>
             <a href="/lab3/clear_cookies">Очистка куки</a>
+        </li>
+        <li>
+            <a href="/lab3/order">Заказ напитка</a>
+        </li>
+        <li>
+            <a href="/lab3/settings">Настройки отображения</a>
         </li>
     </ol>
 {% endblock %}
