--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -4,10 +4,10 @@
 
 {% block content %}
     <h1>Формы POST</h1>
-    <div>Список сделанных страниц</div> 
+    <div>Список сделанных страниц</div>
     <ol>
         <li>
-            <a href="#">Страница 1</a>
+            <a href="/lab4/div-form">Деление чисел</a>
         </li>
         <li>
             <a href="#">Страница 2</a>
