--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -10,10 +10,16 @@
             <a href="/lab4/div-form">Деление чисел</a>
         </li>
         <li>
-            <a href="#">Страница 2</a>
+            <a href="/lab4/sum-form">Суммирование чисел</a>
         </li>
         <li>
-            <a href="#">Страница 3</a>
+            <a href="/lab4/mul-form">Умножение чисел</a>
+        </li>
+        <li>
+            <a href="/lab4/sub-form">Вычитание чисел</a>
+        </li>
+        <li>
+            <a href="/lab4/pow-form">Возведение в степень</a>
         </li>
     </ol>
 {% endblock %}
