--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -1,14 +1,12 @@
-{% extends "base.html" %}
-
-{% block lab %}Лабораторная работа 5{% endblock %}
-
-{% block content %}
-    <h1>Лабораторная работа 5</h1>
-    <p>Добро пожаловать, {{ session.get('username', 'anonymous') }}!</p>
-    <ul>
-        <li><a href="/lab5/login">Вход</a></li>
-        <li><a href="/lab5/register">Регистрация</a></li>
-        <li><a href="/lab5/list">Список статей</a></li>
-        <li><a href="/lab5/create">Создать статью</a></li>
-    </ul>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>База знаний</title>
+</head>
+<body>
+    <h1>База знаний</h1>
+    <p>Добро пожаловать, {{ username }}!</p>
+    <a href="/lab5/login">Войти</a> | <a href="/lab5/register">Зарегистрироваться</a>
+</body>
+</html>
