--- a/templates/lab5/login.html
+++ b/templates/lab5/login.html
@@ -1,17 +1,20 @@
-{% extends "base.html" %}
-
-{% block lab %}Лабораторная работа 5. Вход{% endblock %}
-
-{% block content %}
-    <h1>Вход</h1>
-    <form method="post" action="/lab5/login">
-        <label>Логин:</label>
-        <input type="text" name="username" required><br>
-        <label>Пароль:</label>
-        <input type="password" name="password" required><br>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Авторизация</title>
+</head>
+<body>
+    <h1>Авторизация</h1>
+    <form method="post">
+        <label for="username">Логин:</label>
+        <input type="text" id="username" name="username" required><br>
+        <label for="password">Пароль:</label>
+        <input type="password" id="password" name="password" required><br>
         <button type="submit">Войти</button>
     </form>
     {% if error %}
         <p style="color: red;">{{ error }}</p>
     {% endif %}
-{% endblock %}
+</body>
+</html>
