--- a/templates/lab5/register.html
+++ b/templates/lab5/register.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
-{% block lab %}Лабораторная работа 5. Регистрация{% endblock %}
+{% block lab %}Лабораторная работа 5{% endblock %}
 
 {% block content %}
     <h1>Регистрация</h1>
-    <form method="post" action="/lab5/register">
-        <label>Логин:</label>
-        <input type="text" name="username" required><br>
-        <label>Пароль:</label>
-        <input type="password" name="password" required><br>
+    <form method="post">
+        <label for="login">Логин:</label>
+        <input type="text" id="login" name="login" required>
+        <br>
+        <label for="password">Пароль:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
         <button type="submit">Зарегистрироваться</button>
     </form>
     {% if error %}
