--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>База знаний</h1>
-    <p>Добро пожаловать, {{ username }}!</p>
+    <p>Добро пожаловать, {{ session.get('login', 'Anonymous') }}!</p>
     <a href="/lab5/login">Войти</a> | <a href="/lab5/register">Зарегистрироваться</a>
 </body>
 </html>
