--- a/templates/lab5/login.html
+++ b/templates/lab5/login.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Авторизация</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block lab %}Лабораторная работа 5{% endblock %}
+
+{% block content %}
     <h1>Авторизация</h1>
     <form method="post">
-        <label for="username">Логин:</label>
-        <input type="text" id="username" name="username" required><br>
+        <label for="login">Логин:</label>
+        <input type="text" id="login" name="login" required>
+        <br>
         <label for="password">Пароль:</label>
-        <input type="password" id="password" name="password" required><br>
+        <input type="password" id="password" name="password" required>
+        <br>
         <button type="submit">Войти</button>
     </form>
     {% if error %}
         <p style="color: red;">{{ error }}</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
