--- a/templates/lab5/success_login.html
+++ b/templates/lab5/success_login.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Успешная авторизация</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block lab %}Лабораторная работа 5{% endblock %}
+
+{% block content %}
     <h1>Поздравляем!</h1>
-    <p>{{ message }}</p>
+    <p>Вы успешно авторизовались!</p>
     <a href="/lab5">Перейти к базе знаний</a>
-</body>
-</html>
+{% endblock %}
